tests/paczka2/big_fuzzy/79380909.err
Error in line 4: RpWS A946 30,9
Error in line 2: qSyrt S279 60,9
Error in line 15: m11bf A946 102,43
Error in line 13: YOif1ST6j A946 0,9
Error in line 10: qSyrt A946 852,7
Error in line 8: m11bf A946 54,7
Error in line 20: qSyrt S822 19,3
Error in line 28: qSyrt A566 90,5
Error in line 19: pa7 S279 31,3
Error in line 34: pa7 S822 45,6
Error in line 35: YOif1ST6j S822 52,6
Error in line 39: m11bf A946 62,2
Error in line 45: YOif1ST6j A946 0,5
Error in line 51: DQClh S822 32,5
Error in line 41: m11bf S822 83,6
Error in line 62: pa7 A566 74,2
Error in line 74: DQClh A566 51,8
Error in line 90: S279 S279 90,1
Error in line 94: RpWS S279 64,8
Error in line 103: qSyrt A566 64,3
Error in line 109: DQClh S822 31,4
Error in line 111: pa7 S822 18,4
Error in line 115: m11bf S822 18,7
Error in line 122: DQClh S279 162,7
Error in line 134: qSyrt S822 65,6
Error in line 137: RpWS A566 79,3
Error in line 139: RpWS S279 71,6
Error in line 141: qSyrt A566 21,0
Error in line 145: DQClh A566 70,2
Error in line 131: pa7 S279 58,6
Error in line 159: YOif1ST6j S279 38,3
Error in line 174: qSyrt A946 87,6
Error in line 168: DQClh A946 2,4
Error in line 181: ?A5**
Error in line 173: m11bf S822 35,1
Error in line 151: RpWS S822 62,5
Error in line 176: qSyrt S822 31,8
Error in line 184: RpWS S279 46,6
Error in line 197: YOif1ST6j S279 42,5
Error in line 199: DQClh A946 941,6
Error in line 185: qSyrt A946 25,8
Error in line 212: qSyrt S279 -3,8
Error in line 223: RpWS A566 35,8
Error in line 232: YOif1ST6j S822 51,7
